# snowflake

./: .gitignore  README.md  flake.nix  home.nix  install.sh  remote-install.sh  test-deployment.sh
.github/workflows/: check.yml  release.yml
hm/: default.nix  home.nix
hm/apps/: default.nix  ghostty.nix  kitty.nix
hm/cli-apps/: default.nix  direnv.nix  git.nix  nix-index.nix  starship.nix  tmux.nix
hm/dotfiles/: omp.json
hm/nvf/: default.nix  nvf-config.nix
hm/shell-config/: default.nix  fish.nix  zsh.nix
home/: default.nix
home/apps/: ghostty.nix  kitty.nix
home/cli-apps/: direnv.nix  eza.nix  fzf.nix  git.nix  omp.nix  tmux.nix  zoxide.nix
home/shell-config/: fish.nix  zsh.nix
hosts/: common.nix
hosts/Makima/: configuration.nix  default.nix  filesystems.nix  hardware-configuration.nix  hardware.nix
hosts/Yor/: configuration.nix  hardware-configuration.nix
hosts/common/: base.nix  disko-config.nix
installer/: backend.go  cmd.go  go.mod  go.sum  install.py  main.go  state.go  steps.go  styles.go  tui.go  ui.go  update.go  view.go
installer-rs/: Cargo.toml
installer-rs/flake/: PLACEHOLDER
installer-rs/src/: app.rs  backend.rs  cmd.rs  flake.rs  main.rs  state.rs  ui.rs
installer/flake/: PLACEHOLDER  README.md
lib/: importers.nix
modules/home/: direnv.nix  eza.nix  fish.nix  fzf.nix  ghostty.nix  git.nix  kitty.nix  omp.nix  starship.nix  tmux.nix  zoxide.nix  zsh.nix
modules/nixos/: audio.nix  bluetooth.nix  boot.nix  cups.nix  dev.nix  (+13 more)
nixos/: default.nix
parts/: go-installer.nix  installer.nix  nixos.nix  rust-installer.nix
(+31 files in other folders)
