[package]
name = "snowflake-installer"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "snowflake-installer"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["user"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
